<resources>
    <!-- General -->
    <string name="app_name">sudo -ku</string>
    <string name="app_slogan">Sudoku for system administrators</string>

    <string name="game_type_number">Number Puzzle</string>
    <string name="game_type_letter">Letter Puzzle</string>
    <string name="label_save_date">Last Played:</string>
    <string name="label_progress">Progress:</string>
    <string name="label_elapsed_time">Duration:</string>

    <!-- Start Menu Activity -->
    <string name="start_menu_label">Main Menu</string>
    <string name="start_menu_new_game">Start New Game</string>
    <string name="start_menu_no_saved_games">There are no saved games, yet.\nPress the plus sign to start a new game.</string>

    <string name="start_menu_create_random_label">Start Random Game</string>
    <string name="start_menu_delete_all_label">Delete All Games</string>
    <string name="start_menu_visit_website_label">Visit Website</string>
    <string name="start_menu_man_sudo_label">TLDR sudo</string>

    <!-- Game Type Activity -->
    <string name="new_game_label">New Game</string>

    <string name="new_game_param_game_type">Game Type</string>
    <string name="new_game_param_board_size">Board Size</string>
    <string name="new_game_param_character_set_numbers">Available Numbers</string>
    <string name="new_game_param_character_set_letters">Available Letters</string>
    <string name="new_game_param_character_set_none_selected">None selected</string>
    <string name="new_game_param_prefill">Prefilled Fields</string>
    <string name="new_game_param_lock_prefilled">Lock Prefilled Fields</string>
    <string name="new_game_action_start_game">Start Game</string>

    <string name="new_game_error_wrong_amount_of_numbers">Choose exactly %d numbers</string>
    <string name="new_game_error_wrong_amount_of_letters">Choose exactly %d letters</string>
    <string name="new_game_error_wrong_amount_fix">New Selection</string>

    <!-- Game Activity -->
    <string name="game_label">@string/app_name</string>
    <string name="game_pencil_button_description">Pencil in character</string>
    <string name="game_discard_game">Discard Game</string>
    <string name="game_discard_game_confirm">Do you really want to discard this game?</string>
    <string name="game_discard_game_abort">Phew! I really thought you mean it.</string>
    <string name="game_discard_game_success">The game has been discarded.</string>

    <!-- Game Finished Activity -->
    <string name="game_finished_label">Game Finished</string>
    <string name="game_finished_congratulations">Congratulations!</string>
    <string name="game_finished_new_game_button">New Game</string>
    <string name="game_finished_back_to_game_button">Back to the Game</string>

    <!-- Background tasks -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undo">Undo</string>

    <string name="task_deleteAllGames_none_found">There are no saved games to delete, yet</string>
    <string name="task_deleteAllGames_confirm_message">Do you really want to delete all saved games?</string>
    <string name="task_deleteAllGames_success">All saved games have been deleted</string>
    <string name="task_deleteAllGames_undone">Luckily we found an old backup copy. Let\'s hope it\'s still good.</string>

    <string name="task_preloadKnownWords_error">
        An error occurred while loading the list of known words.
        You can still play the game, but not all words will be recognized correctly.
        The underlying error was: %1s
    </string>
</resources>